# isekai_parkour

./: Cargo.toml  project.godot
assets/background/: background_trees_1.png.import  background_trees_2.png.import  background_trees_3.png.import  background_trees_4.png.import  close_light.png.import  dense_leaves.png.import  dirt.png.import  distance_trees.png.import  far_light.import  far_light.png.import  grass.png.import  sky.png.import
assets/enemy/: slime.png.import
assets/menu/: GUI.png.import  isekai quartet.png.import  title.png.import
assets/menu/gui/: button_disabled.png.import  button_normal.png.import  button_pressed.png.import  input_box.png.import
assets/player/: animation-sheet.png.import  animation.png.import
assets/theme/: ui.theme  ui.tres
crates/isekai_parkour_tilemap/: Cargo.toml
entities/button/: Button.tscn  button.gd
entities/player/: Player.tscn  player_controller.gd  player_state.gd
entities/player/state/: fall.gd  idle.gd  jump.gd  on_ground.gd  on_motion.gd  run.gd  slide.gd
entities/slime/: Slime.tscn  slime.gd
scene/: Background.tscn  MainMenu.tscn  MenuManager.gd  MenuManager.tscn  Player.tscn  World.tscn
scene/enemy/: Slime.tscn
scene/menu/: MainMenu.gd  MainMenu.tscn  PauseMenu.gd  PauseMenu.tscn
script/: camera_follower.gd  player_controller.gd  state_machine.gd
script/enemy/: slime.gd
script/player/: state.gd
state_machine/: machine.gd  state.gd
